Refactor tenant content handling and navigation
* Created a tenant content folder `/wwwroot/tenants-content`
* HTML content is file <topic>.html
* Metadata is in file <topic>.json
* Created new home.html, home.json, news.html, news.json, rule-of-game.html, and rule-of-game.json files with metadata and placeholder content.
* Added a new home.cshtml view to render tenant content.
* Simplified footer in _Layout.cshtml by removing tenant-specific logic for the "Contact" link.
* Updated `WebAppStartup` to use scoped `MainNavigationNodeBuilder` and singleton `TenantContentProvider`

* Updated WebAppStartup.cs to use `MainNavigationNodeBuilder` instead of `CustomMainNavigationNodeBuilder `
* Deleted `CustomMainNavigationNodeBuilder` class and related usings.
* Added class `ITenantContentProvider` to handel tenant content
* Added a new `ContentItem` class in ContentItem.cs to represent a content item for a tenant.
* Introduced a new interface `ITenantContentProvider`
* Implemented `ITenantContentProvider` interface in `TenantContentProvider`
* Added new methods in `MainNavigationNodeBuilder` to create tenant-specific navigation nodes.
* Updated `TenantContent` controller to use `ITenantContentProvider` and added a new Home action.

* Updated `IMainNavigationNodeBuilder` interface to make GetNavigationNodes method asynchronous.
* Updated `MainNavigation` component and `MainNavigationComponentModelExtensions` to use asynchronous methods.
* Updated Default.cshtml and NavigationNodeChildDropdownPartial.cshtml to use asynchronous methods for CSS class generation.

* Updated .gitignore to include tenants-content directory

--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -15,13 +15,13 @@
         if (!node.HasVisibleChildNodes())
         {
             <li class="nav-item">
-                <a class="@Model.GetClass(Context, node, "nav-link", "active", true)" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
+                <a class="@(await Model.GetClassAsync(Context, node, "nav-link", "active", true))" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
             </li>
         }
         else
         {
             <li class="nav-item dropdown">
-                <a class="@Model.GetClass(Context, node, "nav-link dropdown-toggle", "active", true)" data-bs-toggle="dropdown" href="@Url.Content(node.Url!)">
+                <a class="@(await Model.GetClassAsync(Context, node, "nav-link dropdown-toggle", "active", true))" data-bs-toggle="dropdown" href="@Url.Content(node.Url!)">
                     @Html.Raw(node.GetIcon())@node.Text
                 </a>
                 <partial name="@League.Views.ViewNames.Shared.NavigationNodeChildDropdownPartial" model="(Model, node)" />
