--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -23,7 +23,7 @@
         }
         else
         {
-            <div class="fw-bolder my-2">@Localizer["The registration deadline for this season has unfortunately already expired"].</div>
+        <div class="fw-bolder my-2">@Localizer["We are currently outside the registration period."].</div>
         }
         @if (Model.TournamentRoundTeams.Count == 0)
         {
