Update Axuno.Tools to `TimeZoneNames`package v7.0.0

--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -23,7 +23,7 @@
         }
         else
         {
-        <div class="fw-bolder my-2">@Localizer["We are currently outside the registration period."].</div>
+        <div class="fw-bolder my-2">@Localizer["We are currently outside the registration period"].</div>
         }
         @if (Model.TournamentRoundTeams.Count == 0)
         {
