Add team manager checks and warnings for missing phone numbers
Updated the `Index` method in `Manage.cs` to check user claims for team managers. Introduced `IsTeamManager` property in `IndexViewModel` and updated the view to display warnings for team managers without a primary phone number.

Modified `IndexViewModel.cs` to include the new property. Updated `Index.cshtml` to conditionally render warning messages.

Localized strings added to `Index.de.resx` and `MyTeam.de.resx` for the new warning messages. Similar checks implemented in `MyTeam.cshtml` for managers missing their primary phone number.

--- a/League/Views/Manage/Index.cshtml
+++ b/League/Views/Manage/Index.cshtml
@@ -63,7 +63,17 @@
     </ul>
     <ul class="list-inline g-0">
         <li class="list-inline-item col-12 text-success col-md-3">@(Metadata.GetDisplayName<EditPhoneViewModel>(nameof(EditPhoneViewModel.PhoneNumber)))</li>
-        <li class="list-inline-item col-12 col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber)</li>
+        <li class="list-inline-item col-12 col-md-7">
+            @Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) 
+                ? Localizer["[Not set]"].Value 
+                : Model.ApplicationUser.PhoneNumber)
+            @{
+                if (string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) && Model.IsTeamManager)
+                {
+                    <span class="text-danger ps-2">⚠ @Localizer["You're a team contact - please add"].Value</span>
+                }
+            }
+        </li>
         <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
