chore: Update axuno logo and copyright
Includes updates in picture credits and legal disclosure

--- a/League.Demo/Views/Home/LegalDisclosure.cshtml
+++ b/League.Demo/Views/Home/LegalDisclosure.cshtml
@@ -12,7 +12,7 @@
             <p class="mb-0"><b>Registered company name:</b></p>
             <p>
                 axuno gemeinnützige GmbH<br />
-                <span class="text-muted">(axuno Non-profit Ltd.)</span>
+                <span class="text-muted">(axuno LLC)</span>
             </p>
 
             <p class="mb-0"><b>Postal address:</b></p>
@@ -52,9 +52,9 @@
                 <b>Bank:</b>
             </p>
             <p>
-                Fidor Bank AG, Germany<br />
-                IBAN Account DE61 7002 2200 0020 1378 00<br />
-                BIC FDDODEMMXXX<br />
+                Deutsche Skatbank, Germany<br />
+                IBAN Account DE21 8306 5408 0005 2828 70<br />
+                BIC GENODEF1SLR<br />
             </p>
         </article>
         <article class="col-md-6">
