--- a/League.Demo/Views/Home/LegalDisclosure.de.cshtml
+++ b/League.Demo/Views/Home/LegalDisclosure.de.cshtml
@@ -51,9 +51,9 @@
                 <b>Bank:</b>
             </p>
             <p>
-                Fidor Bank AG, Deutschland<br/>
-                IBAN Nr. DE61 7002 2200 0020 1378 00<br/>
-                BIC FDDODEMMXXX<br/>
+                Deutsche Skatbank, Deutschland<br />
+                IBAN Account DE21 8306 5408 0005 2828 70<br />
+                BIC GENODEF1SLR<br />
             </p>
         </article>
         <article class="col-md-6">
