--- a/League.Demo/Views/Home/PictureCredits.cshtml
+++ b/League.Demo/Views/Home/PictureCredits.cshtml
@@ -12,7 +12,7 @@
     <p>@Localizer["We give credit to the following list of pictures"]:</p>
     <p>
         <a href="@Url.Content("~/images/logo-volleyball-league.svg")" class="credit">© vectorstock 14122148 / vectorstock.com</a><br />
-        <a href="@Url.Content("~/images/logo-axuno.svg")" class="credit">© Elaelo / fotolia.com</a><br />
+        <a href="@Url.Content("~/images/logo-axuno.svg")" class="credit">© axuno gGmbH</a> / <a href="https://www.axuno.net/">axuno gGmbH</a><br />
         <a href="@Url.Content("~/images/home_welcome_carousel-01.png")" class="credit">© vectorstock 14122148 / vectorstock.com</a><br />
         <a href="@Url.Content("~/images/home_welcome_carousel-02.jpg")" class="credit">Capri23auto-1767157</a> / <a href="https://pixabay.com/de/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3031697">Pixabay</a><br />
         <a href="@Url.Content("~/images/home_welcome_carousel-03.jpg")" class="credit">Wolfgang Gerth 2639700</a> / <a href="https://pixabay.com/de/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2639700">Pixabay</a><br />
