Fix: Add teamId to returnUrls to return to Team.MyTeam methods
- Updated `SetAdjustedReturnResult` to include `teamId` in return URL.
- Modified methods in `Team.cs` to maintain team context in redirects.
- Made `returnUrl` parameter nullable in `SelectVenue`.
- Adjusted `_ChangeVenueModalPartial.cshtml` to pass `Model.TeamId` in URLs.
- Added unit tests in `MatchSchedulerTests.cs` for single participant scenarios.
- Improved scheduling logic in `MatchScheduler.cs` for rounds with no or one team.

--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -20,7 +20,7 @@
                        asp-controller="@nameof(Venue)"
                        asp-route-id="@Model.VenueId"
                        asp-route-tenant="@tenantUrlSegment"
-                       asp-route-returnurl="@(TenantLink.Action(nameof(Team.MyTeam), nameof(Team)))"
+                       asp-route-returnurl="@(TenantLink.Action(nameof(Team.MyTeam), nameof(Team), new {id = Model.TeamId}))"
                        site-authorize-resource site-resource="@(new List<VenueTeamRow>{{ new VenueTeamRow{ TeamId = Model.TeamId, VenueId = Model.VenueId.Value }}})"
                        site-requirement="@League.Authorization.VenueOperations.EditVenue"
                        class="btn btn-primary d-block w-100">@Localizer["Edit current venue"]</a>
@@ -36,7 +36,7 @@
                    asp-controller="@nameof(Venue)"
                    asp-route-tenant="@tenantUrlSegment"
                    asp-route-tid="@Model.TeamId"
-                   asp-route-returnurl="@TenantLink.Action(nameof(Team.MyTeam), nameof(Team))"
+                   asp-route-returnurl="@TenantLink.Action(nameof(Team.MyTeam), nameof(Team), new {id = Model.TeamId})"
                    site-authorize-resource site-resource="@(new List<VenueTeamRow>())"
                    site-requirement="@League.Authorization.VenueOperations.CreateVenue"
                    class="btn btn-primary d-block w-100">@Localizer["Create new team venue"]</a>
